--- a/map/index.html
+++ b/map/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSPRACTICE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LOCATION MAP</title>
+  <link rel="icon" href="images/favicon.ico" type="image" rel="shortcut icon"/>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="module" src="index.js"></script>
 </head>
-<body>
-    <h1 id="myh1"></h1>
-    <p id="myp"></p>
-    <script src="index.js"></script>
-</body>
+  <body>
+    <div id="map"></div>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1Y-J8JOMVR_IVYvYBfAjiBec-4gHVBoU&callback=initMap">
+</script>
+  </body>
 </html>
