--- a/map/index.html
+++ b/map/index.html
@@ -6,8 +6,8 @@
   <title>LOCATION MAP</title>
   <link rel="icon" href="images/favicon.ico" type="image" rel="shortcut icon"/>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="module" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <script type="module" src="assets/index.js"></script>
 </head>
   <body>
     <div id="map"></div>
