--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#nuestroproducto" class="navbar-link" data-nav-toggler>Nuestro producto</a>
+                        <a href="map/index.html" class="navbar-link" data-nav-toggler>Nuestro producto</a>
                     </li>
 
                     <li class="navbar-item">
